git-svn-id: http://svn.vdombox.ru/flextools/trunk@5828 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ContainersPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ContainersPanel.mxml
@@ -5,9 +5,22 @@
 
 	<fx:Script>
 		<![CDATA[
+			import net.vdombox.ide.modules.scripts.events.ContainersPanelEvent;
+			[Bindable]
+			private var _structure : XML;
+
+			public function get selectionObjectID () : String
+			{
+				return conteinersTree.selectedItem ? conteinersTree.selectedItem.@id : null;
+			}
 			
+			public function set structure( value : XML ) : void
+			{
+				_structure = value;
+			}
 		]]>
 	</fx:Script>
 
-	<mx:Tree height="100%" width="100%" />
+	<mx:Tree id="conteinersTree" dataProvider="{ _structure }" height="100%" labelField="@name" showRoot="true"
+			 width="100%" change="dispatchEvent( new ContainersPanelEvent( ContainersPanelEvent.CONTAINER_CHANGED ) )" />
 </s:Panel>
