--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ContainersPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ContainersPanel.mxml
@@ -6,27 +6,38 @@
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.modules.scripts.events.ContainersPanelEvent;
+
 			[Bindable]
 			private var _structure : XML;
 
-			public function get selectedObjectID () : String
+			public function get selectedObjectID() : String
 			{
 				return containersTree.selectedItem ? containersTree.selectedItem.@id : null;
 			}
-			
-			public function set selectedObjectID ( value : String ) : void
+
+			public function set selectedObjectID( value : String ) : void
 			{
-				if( value )
-					containersTree.selectedItem = _structure..object.( @id == value )[ 0 ];
+				var newSelectedItem : XML;
+
+				if ( value )
+					newSelectedItem = _structure..object.( @id == value )[ 0 ];
+
+				if ( containersTree.selectedItem == newSelectedItem && containersTree.selectedIndex == 0 )
+					return;
+
+				if ( newSelectedItem )
+					containersTree.selectedItem = newSelectedItem;
 				else
 					containersTree.selectedIndex = 0;
+
+				dispatchEvent( new ContainersPanelEvent( ContainersPanelEvent.CONTAINER_CHANGED ) );
 			}
-			
-			public function get selectedItem () : XML
+
+			public function get selectedItem() : XML
 			{
 				return containersTree.selectedItem as XML;
 			}
-			
+
 			public function set structure( value : XML ) : void
 			{
 				_structure = value;
@@ -34,6 +45,8 @@
 		]]>
 	</fx:Script>
 
-	<mx:Tree id="containersTree" dataProvider="{ _structure }" height="100%" labelField="@name" showRoot="true"
-			 width="100%" change="dispatchEvent( new ContainersPanelEvent( ContainersPanelEvent.CONTAINER_CHANGED ) )" />
+	<mx:Tree id="containersTree"
+			 dataProvider="{ _structure }" height="100%" labelField="@name"
+			 showRoot="true" width="100%"
+			 change="dispatchEvent( new ContainersPanelEvent( ContainersPanelEvent.CONTAINER_CHANGED ) )" />
 </s:Panel>
