--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
@@ -6,16 +6,21 @@
 		  
 		  height="100%" width="100%">
 
-	<s:Group height="100%" width="100%" />
+	<components:ScriptEditor id="sriptEditor"
+							 height="100%" width="100%" />
 
-	<s:VGroup width="250" height="100%">
+	<s:VGroup height="100%" width="250">
 
-		<components:PagesPanel id="pagesPanel" width="100%" />
+		<components:PagesPanel id="pagesPanel"
+							   width="100%" />
 
-		<components:ContainersPanel id="containersPanel" width="100%"/>
+		<components:ContainersPanel id="containersPanel"
+									width="100%" />
 
-		<components:ServerScriptsPanel id="serverScriptsPanel" width="100%"/>
+		<components:ServerScriptsPanel id="serverScriptsPanel"
+									   width="100%" />
 
-		<components:LibrariesPanel id="librariesPanel" width="100%"/>
+		<components:LibrariesPanel id="librariesPanel"
+								   width="100%" />
 	</s:VGroup>
 </s:HGroup>
