git-svn-id: http://svn.vdombox.ru/flextools/trunk@5846 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
@@ -12,15 +12,19 @@
 	<s:VGroup height="100%" width="250">
 
 		<components:PagesPanel id="pagesPanel"
+							   title="{ resourceManager.getString( 'Scripts_General', 'pages_panel_title' ) }"
 							   width="100%" />
 
 		<components:ContainersPanel id="containersPanel"
+									title="{ resourceManager.getString( 'Scripts_General', 'containers_panel_title' ) }"
 									width="100%" />
 
 		<components:ServerScriptsPanel id="serverScriptsPanel"
+									   title="{ resourceManager.getString( 'Scripts_General', 'server_scripts_panel_title' ) }"
 									   width="100%" />
 
 		<components:LibrariesPanel id="librariesPanel"
+								   title="{ resourceManager.getString( 'Scripts_General', 'libraries_panel_title' ) }"
 								   width="100%" />
 	</s:VGroup>
 </s:HGroup>
