--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/EditArea.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/EditArea.mxml
@@ -32,7 +32,8 @@
 
 			public function set syntax( value : String ) : void
 			{
-				_syntax = value;
+				if( value )
+					_syntax = value;
 			}
 
 			public function get content() : String
