git-svn-id: http://svn.vdombox.ru/flextools/trunk@5857 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Toolset.mxml
@@ -17,10 +17,8 @@
 		<s:HorizontalLayout />
 	</s:layout>
 	
-	<s:ToggleButton id="createNewApplicatoin"
+	<!--<s:ToggleButton id="createNewApplicatoin"
 					label="New Application"
-					click="dispatchEvent( new ToolsetEvent( ToolsetEvent.OPEN_CREATE_APPLICATION ) ); createNewApplicatoin.selected = false;"/>
-	
-	<s:Button  label="Export"/>
+					click="dispatchEvent( new ToolsetEvent( ToolsetEvent.OPEN_CREATE_APPLICATION ) ); createNewApplicatoin.selected = false;"/>-->
 	
 </s:Group>
