--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/Tree.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/Tree.mxml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<common:VIModule 
-	xmlns:fx="http://ns.adobe.com/mxml/2009"
-	xmlns:mx="library://ns.adobe.com/flex/halo"
-	xmlns:s="library://ns.adobe.com/flex/spark"
-	xmlns:common="net.vdombox.ide.common.*">
+<common:VIModule xmlns:fx="http://ns.adobe.com/mxml/2009"
+				 xmlns:mx="library://ns.adobe.com/flex/halo"
+				 xmlns:s="library://ns.adobe.com/flex/spark"
+				 
+				 xmlns:common="net.vdombox.ide.common.*">
+
+	<fx:Metadata> 
+		[ResourceBundle("Tree_General")] 
+	</fx:Metadata>
+
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.modules.tree.ApplicationFacade;
