--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectAttributesPanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectAttributesPanel.mxml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009"
-		  xmlns:s="library://ns.adobe.com/flex/spark"
-		  xmlns:mx="library://ns.adobe.com/flex/halo">
+		 xmlns:s="library://ns.adobe.com/flex/spark"
+		 xmlns:mx="library://ns.adobe.com/flex/halo">
 
 	<s:layout>
+
 		<s:VerticalLayout />
 	</s:layout>
+
+	<s:List id="attributesList"
+			height="100%" width="100%" useVirtualLayout="false"
+			itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.AttributeItemRenderer" />
 </s:Panel>
