--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/SettingsScreen.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/SettingsScreen.mxml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		 xmlns:s="library://ns.adobe.com/flex/spark" 
+<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
+		 xmlns:s="library://ns.adobe.com/flex/spark"
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
 		 
 		 implements="net.vdombox.ide.common.interfaces.ISettingsScreen"
 		 
-		 width="100%" height="100%">
+		 height="100%" width="100%">
+
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.common.interfaces.ISettingsScreen;
-			
-			import spark.skins.spark.CheckBoxSkin;
-			
+
 			public function performOK() : void
 			{
-				dispatchEvent( new Event( "performOK" ));
+				dispatchEvent( new Event( "performOK" ) );
 			}
 		]]>
 	</fx:Script>
-	
-	<s:Label text="Settings application managment" fontWeight="bold" fontSize="14" left="20" top="20" fontFamily="Verdana"/>
-	
-	<s:CheckBox id="saveLastApplication" skinClass="spark.skins.spark.CheckBoxSkin"
-		x="20" y="42" label="Save Last Application"/>
+
+	<s:Rect bottom="5" left="5" right="5" top="5">
+
+		<s:stroke>
+
+			<s:SolidColorStroke color="gray" />
+		</s:stroke>
+	</s:Rect>
+
+	<s:Label text="Settings Screen for ResourceBrowser module"
+			 color="gray" horizontalCenter="0" verticalCenter="0" />
 </s:Group>
