--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/Toolset.mxml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group 
-	xmlns:fx="http://ns.adobe.com/mxml/2009"
-	xmlns:s="library://ns.adobe.com/flex/spark"
-	xmlns:mx="library://ns.adobe.com/flex/halo"
-	implements="net.vdombox.ide.common.interfaces.IToolset">
+<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
+		 xmlns:s="library://ns.adobe.com/flex/spark"
+		 xmlns:mx="library://ns.adobe.com/flex/halo"
+		 
+		 implements="net.vdombox.ide.common.interfaces.IToolset">
+
+	<fx:Metadata> 
+		[ResourceBundle("ResourceBrowser_General")] 
+	</fx:Metadata>
 
 	<fx:Script>
 		<![CDATA[
@@ -17,6 +21,6 @@
 		<s:HorizontalLayout />
 	</s:layout>
 
-	<s:ToggleButton id="resourceButton"
-		label="ResourceBrowser" />
+	<s:ToggleButton id="toolsetButton"
+					label="{ resourceManager.getString( 'ResourceBrowser_General', 'toolset_button_label' ) }" />
 </s:Group>
