--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/CreatePageWindow.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/CreatePageWindow.mxml
@@ -3,13 +3,13 @@
 		  xmlns:s="library://ns.adobe.com/flex/spark"
 		  xmlns:mx="library://ns.adobe.com/flex/halo"
 		  
-		  height="100%" width="100%"
+		  height="100%" measuredHeight="400" measuredWidth="400" width="100%"
 		  horizontalAlign="center">
 
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayList;
-			
+
 			import net.vdombox.ide.common.vo.TypeVO;
 			import net.vdombox.ide.modules.tree.events.CreatePageWindowEvent;
 
@@ -30,16 +30,19 @@
 
 	<s:Label text="Select page type" />
 
-	<s:List id="pageTypeList" dataProvider="{ _pagesDataProvider }" height="100%" width="100%" requireSelection="true"
+	<s:List id="pageTypeList"
+			dataProvider="{ _pagesDataProvider }" height="100%" width="100%"
 			itemRenderer="net.vdombox.ide.modules.tree.view.components.PageTypeItemRenderer"
-			useVirtualLayout="false" />
+			requireSelection="true" useVirtualLayout="false" />
 
 	<s:HGroup width="100%">
 
 		<mx:Spacer width="100%" />
 
-		<s:Button label="Create" click="dispatchEvent( new CreatePageWindowEvent( CreatePageWindowEvent.PERFORM_CREATE ) )" />
+		<s:Button label="Create"
+				  click="dispatchEvent( new CreatePageWindowEvent( CreatePageWindowEvent.PERFORM_CREATE ) )" />
 
-		<s:Button label="Cancel" click="dispatchEvent( new CreatePageWindowEvent( CreatePageWindowEvent.PERFORM_CANCEL ) )" />
+		<s:Button label="Cancel"
+				  click="dispatchEvent( new CreatePageWindowEvent( CreatePageWindowEvent.PERFORM_CANCEL ) )" />
 	</s:HGroup>
 </s:VGroup>
