--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Linkage.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Linkage.mxml
@@ -2,4 +2,11 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
 		 xmlns:mx="library://ns.adobe.com/flex/halo">
+	<fx:Script>
+		<![CDATA[
+			import net.vdombox.ide.modules.tree.model.vo.LinkageVO;
+			
+			public var linkageVO : LinkageVO;
+		]]>
+	</fx:Script>
 </s:Group>
