--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
@@ -11,7 +11,8 @@
 		<s:HorizontalLayout />
 	</s:layout>
 
-	<s:Scroller height="100%" width="100%">
+	<s:Scroller id="scroller"
+				height="100%" width="100%">
 
 		<s:Group>
 
