git-svn-id: http://svn.vdombox.ru/flextools/trunk@5880 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/TreeCanvas.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/TreeCanvas.mxml
@@ -10,12 +10,16 @@
 			import net.vdombox.ide.modules.tree.view.skins.TreeCanvasSkin;
 			
 			import spark.components.Group;
+			import spark.components.Scroller;
 			
 			[SkinPart( required="true" )]
 			public var treeElementsContainer : Group;
 			
 			[SkinPart( required="true" )]
 			public var linkagesContainer : Group;
+			
+			[SkinPart( required="true" )]
+			public var scroller : Scroller;
 		]]>
 	</fx:Script>
 	
