--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
@@ -2,21 +2,15 @@
 <s:HGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
 		  xmlns:mx="library://ns.adobe.com/flex/halo"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
+		  xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*"
 		  
-		  height="100%" width="100%"
-		  xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*">
+		  height="100%" width="100%">
 
 	<mx:Accordion id="typesAccordion"
 				  height="100%" width="150" />
 
-	<s:Group height="100%" width="100%">
-		<s:Rect left="2" right="2" top="2" bottom="2">
-			<s:stroke>
-				<mx:SolidColorStroke color="gray" />
-			</s:stroke>
-		</s:Rect>
-		<s:Label text="not implemented yet"  horizontalCenter="0" verticalCenter="0" color="gray"/>
-	</s:Group>
+	<components:WorkArea id="workArea"
+						 height="100%" width="100%" />
 
 	<s:VGroup height="100%" width="200">
 
@@ -25,6 +19,5 @@
 
 		<components:ObjectsTreePanel id="objectsTreePanel"
 									 height="100%" width="200" />
-
 	</s:VGroup>
 </s:HGroup>
