--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ItemSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ItemSkin.mxml
@@ -10,19 +10,8 @@
 		<s:State name="disabled" />
 	</s:states>
 
-	<s:Rect height="100%" width="100%">
-
-		<s:stroke>
-
-			<s:SolidColorStroke color="gray" />
-		</s:stroke>
-
-		<s:fill>
-
-			<s:SolidColor color="white" />
-		</s:fill>
-	</s:Rect>
-
+	<s:Group id="background" />
+	
 	<s:Scroller id="scroller"
 				focusEnabled="false"
 				bottom="0" left="0" right="0" top="0"
