--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/WorkArea.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/WorkArea.mxml
@@ -4,24 +4,34 @@
 				 xmlns:mx="library://ns.adobe.com/flex/halo"
 				 xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*"
 				 
-				 skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.ItemSkin" itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.Item">
+				 itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.Item"
+				 skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.ItemSkin">
 
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayCollection;
 			import mx.collections.Sort;
 			import mx.collections.SortField;
-			
+
 			import net.vdombox.ide.modules.wysiwyg.model.vo.ItemVO;
 			import net.vdombox.ide.modules.wysiwyg.view.skins.ItemSkin;
 
-			public function set itemVO( value : ItemVO ) : void
+			private var _itemVO : ItemVO;
+
+			override public function get itemVO() : ItemVO
 			{
+				return _itemVO;
+			}
+
+			override public function set itemVO( value : ItemVO ) : void
+			{
+				_itemVO = value;
+
 				var childrenDataProvider : ArrayCollection = new ArrayCollection( value.children );
 				childrenDataProvider.sort = new Sort();
-				childrenDataProvider.sort.fields = [new SortField( "zindex" ), new SortField( "hierarchy" ), new SortField( "order" )];
+				childrenDataProvider.sort.fields = [ new SortField( "zindex" ), new SortField( "hierarchy" ), new SortField( "order" ) ];
 				childrenDataProvider.refresh();
-				
+
 				dataProvider = childrenDataProvider;
 			}
 		]]>
