--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ItemSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ItemSkin.mxml
@@ -6,18 +6,35 @@
 	<s:states>
 
 		<s:State name="normal" />
+
 		<s:State name="hovered" />
+
+		<s:State name="highlighted" />
+
 		<s:State name="disabled" />
 	</s:states>
 
-	<s:Rect width="100%" height="100%" alpha=".0" alpha.hovered="1">
+	<s:Rect height="100%" width="100%">
+
 		<s:fill>
-			<s:SolidColor color="white" color.hovered="red" />
+
+			<s:SolidColor color="white"
+						  alpha=".0" />
 		</s:fill>
 	</s:Rect>
-	
+
 	<s:Group id="background" />
-	
+
+	<s:Rect height="100%" width="100%"
+			includeIn="highlighted">
+
+		<s:stroke>
+
+			<s:SolidColorStroke color="green"
+								weight="2" />
+		</s:stroke>
+	</s:Rect>
+
 	<s:Scroller id="scroller"
 				focusEnabled="false"
 				bottom="0" left="0" right="0" top="0"
