git-svn-id: http://svn.vdombox.ru/flextools/trunk@5893 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/WorkArea.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/WorkArea.mxml
@@ -5,19 +5,24 @@
 				 xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*"
 				 
 				 itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.Item"
-				 skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.ItemSkin">
+				 skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.WorkAreaSkin">
 
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayCollection;
 			import mx.collections.Sort;
 			import mx.collections.SortField;
-
+			
 			import net.vdombox.ide.modules.wysiwyg.model.vo.ItemVO;
-			import net.vdombox.ide.modules.wysiwyg.view.skins.ItemSkin;
+			import net.vdombox.ide.modules.wysiwyg.view.skins.WorkAreaSkin;
+			
+			import spark.components.Group;
 
 			private var _itemVO : ItemVO;
 
+			[SkinPart(required="false")]
+			public var upperLayer : Group;
+			
 			override public function get itemVO() : ItemVO
 			{
 				return _itemVO;
